[workspace]
resolver = "3"
members = ["ferveo", "ferveo-common", "ferveo-tdec", "subproductdomain"]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Dmitry Kuzmin"]

[workspace.dependencies]
# workspace packages
subproductdomain = { path = "subproductdomain", package = "subproductdomain-gear", version = "0.7.0" }
ferveo-common = { path = "ferveo-common", package = "ferveo-gear-common", version = "0.7.0" }
ferveo-tdec = { path = "ferveo-tdec", package = "ferveo-gear-tdec", version = "0.7.0" }

anyhow = "1.0.47"
ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
bincode = "1.3.3"
cargo-smart-release = "0.21.7"
chacha20poly1305 = "0.10.1"
criterion = "0.3"
derive_more = { version = "0.99", default-features = false }
digest = "0.10.0"
generic-array = "0.14.7"
hex = "0.4"
itertools = "0.10.5"
measure_time = "0.8"
pprof = "0.6"
rand = "0.8"
rand_core = "0.6.4"
rand_old = { package = "rand", version = "0.7" }             # TODO: Used by benchmarks/pairing.rs, update to rand = "0.8" when possible
serde = "1.0"
serde_json = "1"
sha2 = "0.10.6"
test-case = "3.3.1"
thiserror = "1.0"
zeroize = "1.6.0"
parity-scale-codec = "3.7.5"
const-hex = { version = "1" }

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Optimizations are needed such that the tests run in a reasonable timeframe
[profile.test]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = true
