[workspace]
resolver = "3"
members = ["ferveo", "ferveo-common", "ferveo-tdec", "subproductdomain"]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Dmitry Kuzmin"]

[workspace.dependencies]
# workspace packages
subproductdomain = { path = "subproductdomain", package = "subproductdomain-gear", version = "0.7.0", default-features = false }
ferveo-common = { path = "ferveo-common", package = "ferveo-gear-common", version = "0.7.0", default-features = false }
ferveo-tdec = { path = "ferveo-tdec", package = "ferveo-gear-tdec", version = "0.7.0", default-features = false }

anyhow = { version = "1.0.47", default-features = false }
ark-bls12-381 = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
bincode = "1.3.3"
cargo-smart-release = "0.21.7"
chacha20poly1305 = { version = "0.10.1", default-features = false }
criterion = "0.3"
derive_more = { version = "0.99", default-features = false }
digest = "0.10.0"
generic-array = "0.14.7"
hex = { version = "0.4", default-features = false }
itertools = { version = "0.10.5", default-features = false }
measure_time = "0.8"
pprof = "0.6"
rand = { version = "0.8", default-features = false }
rand_core = "0.6.4"
rand_old = { package = "rand", version = "0.7" }             # TODO: Used by benchmarks/pairing.rs, update to rand = "0.8" when possible
serde = { version = "1.0", default-features = false }
serde_json = "1"
sha2 = { version = "0.10.6", default-features = false }
test-case = "3.3.1"
thiserror = { version = "2.0", default-features = false }
zeroize = { version = "1.6.0", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false }
const-hex = { version = "1", default-features = false }

[profile.bench]
opt-level = 3
debug = true
lto = true
codegen-units = 1

# Optimizations are needed such that the tests run in a reasonable timeframe
[profile.test]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = true
