[package]
name = "ferveo-gear-common"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Common types and traits for Ferveo"

[dependencies]
ark-ec = { workspace = true }
ark-serialize = { workspace = true, features = ["derive"] }
ark-std = { workspace = true }
bincode = { workspace = true }
generic-array = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
const-hex = { workspace = true, optional = true, features = ["serde"] }


[dev-dependencies]
ark-bls12-381 = { workspace = true }
serde_json.workspace = true
ark-ff.workspace = true

[features]
default = []

# Enables serialize/deserialize arkworks types with hex.
ark-serde-hex = ["dep:const-hex"]
