[package]
name = "ferveo-gear-common"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Common types and traits for Ferveo"

[dependencies]
ark-ec = { workspace = true, default-features = false }
ark-serialize = { workspace = true, default-features = false, features = ["derive"] }
ark-std = { workspace = true, default-features = false }
bincode = { workspace = true, optional = true }
generic-array = { workspace = true }
rand = { workspace = true, default-features = false, features = ["alloc", "std_rng"] }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
thiserror.workspace = true
const-hex = { workspace = true, optional = true, features = ["alloc", "serde"] }
parity-scale-codec = { workspace = true, optional = true }


[dev-dependencies]
ark-bls12-381 = { workspace = true }
serde_json.workspace = true
ark-ff.workspace = true

[features]
default = []

std = [
    "dep:bincode",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-std/std",
    "const-hex?/std",
    "parity-scale-codec?/std",
    "rand/std",
    "serde/std",
]

# Enables serialize/deserialize arkworks types with hex.
ark-serde-hex = ["dep:const-hex"]

# Enables SCALE encode/decode helpers for arkworks types.
parity-codec = ["dep:parity-scale-codec"]
