[package]
name = "ferveo-gear-tdec"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Threshold signature and encryption using group secret key"
repository = "https://github.com/nucypher/ferveo/"
readme = "README.md"

[lib]
bench = false

[dependencies]
# Workspace dependencies
subproductdomain.workspace = true
ferveo-common.workspace = true

# Arkworks ecosystem dependencies
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }

bincode = { workspace = true }
chacha20poly1305 = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

# Optional dependencies
parity-scale-codec = { workspace = true, optional = true, features = [
    "derive",
] }
const-hex = { workspace = true, optional = true, features = ["serde"] }

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
criterion = { workspace = true, features = ["html_reports"] }
rand_core = { workspace = true }
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[[bench]]
name = "tpke"
path = "benches/tpke.rs"
harness = false

[[bench]]
name = "arkworks"
path = "benches/arkworks.rs"
harness = false

[features]
default = ["bls12_381", "parity-codec"]

# Enables support BLS12-381 type aliases.
bls12_381 = []

# Enables encode/decode for Ciphertext using parity-scale-codec
parity-codec = ["dep:parity-scale-codec", "ferveo-common/parity-codec"]

# Enables hex serialize/deserialize for arkworks types.
serde-hex = ["ferveo-common/ark-serde-hex", "dep:const-hex"]
