[package]
name = "ferveo-gear-tdec"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Threshold signature and encryption using group secret key"
repository = "https://github.com/nucypher/ferveo/"
readme = "README.md"

[lib]
bench = false

[dependencies]
# Workspace dependencies
subproductdomain = { workspace = true, default-features = false }
ferveo-common = { workspace = true, default-features = false }

# Arkworks ecosystem dependencies
ark-bls12-381 = { workspace = true, default-features = false, features = ["curve"] }
ark-ec = { workspace = true, default-features = false }
ark-ff = { workspace = true, default-features = false }
ark-poly = { workspace = true, default-features = false }
ark-serialize = { workspace = true, default-features = false }
ark-std = { workspace = true, default-features = false }

bincode = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, default-features = false, features = ["alloc"] }
hex = { workspace = true, default-features = false, features = ["alloc"] }
itertools = { workspace = true, default-features = false, features = ["use_alloc"] }
rand = { workspace = true, default-features = false, features = ["alloc"] }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"] }
sha2 = { workspace = true, default-features = false }
thiserror = { workspace = true }
zeroize = { workspace = true, default-features = false, features = ["alloc", "derive"] }

# Optional dependencies
parity-scale-codec = { workspace = true, optional = true, features = [
    "derive",
] }
const-hex = { workspace = true, optional = true, features = ["alloc", "serde"] }

[dev-dependencies]
clap = { version = "4.6", features = ["derive"] }
criterion = { workspace = true, features = ["html_reports"] }
rand_core = { workspace = true }
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[[bench]]
name = "tpke"
path = "benches/tpke.rs"
harness = false

[[bench]]
name = "arkworks"
path = "benches/arkworks.rs"
harness = false

[features]
default = ["bls12_381", "parity-codec"]

# Enables Rust standard library support.
std = [
    "dep:bincode",
    "ark-bls12-381/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-serialize/std",
    "ark-std/std",
    "chacha20poly1305/std",
    "const-hex?/std",
    "ferveo-common/std",
    "hex/std",
    "itertools/use_std",
    "parity-scale-codec?/std",
    "rand/std",
    "serde/std",
    "sha2/std",
    "subproductdomain/std",
    "zeroize/std",
]

# Enables support BLS12-381 type aliases.
bls12_381 = []

# Enables encode/decode for Ciphertext using parity-scale-codec
parity-codec = ["dep:parity-scale-codec", "ferveo-common/parity-codec"]

# Enables hex serialize/deserialize for arkworks types.
serde-hex = ["ferveo-common/ark-serde-hex", "dep:const-hex"]
