[package]
name = "ferveo-nucypher"
version = "0.4.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/nucypher/ferveo"
readme = "README.md"
description = "An implementation of a DKG protocol for threshold decryption."
keywords = ["DKG"]
categories = ["cryptography"]
authors = ["David Nuñez <david@nucypher.com>", "Piotr Roslaniec <p.roslaniec@gmail.com>", "Heliax AG <hello@heliax.dev>"]

[lib]
bench = false

[dependencies]
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
ferveo-common = { package = "ferveo-nucypher-common", path = "../ferveo-common", version = "^0.4.0" }
ferveo-tdec = { package = "ferveo-nucypher-tdec", path = "../ferveo-tdec", features = ["bls12_381"], version = "^0.4.0" }
hex = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
subproductdomain = { package = "subproductdomain-nucypher", path = "../subproductdomain", version = "^0.4.0" }
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
generic-array = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
digest = { workspace = true, features = ["alloc"] }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }
test-case = { workspace = true }
serde = { workspace = true, features = ["derive"] }
cargo-smart-release = { workspace = true }

[[example]]
name = "bench_primitives_size"
path = "examples/bench_primitives_size.rs"

#[[bench]]
#name = "pvdkg"
#path = "benches/benchmarks/pvdkg.rs"
#harness = false

[[bench]]
name = "benchmarks"
path = "benches/bench_main.rs"
harness = false

[package.metadata.cargo-machete]
ignored = [
    "rand_old" # used by benchmarks/pairing.rs
]
