[package]
name = "ferveo-nucypher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/gear-tech/ferveo-nucypher"
readme = "README.md"
description = "An implementation of a DKG protocol for threshold decryption."
keywords = ["DKG"]
categories = ["cryptography"]
authors.workspace = true

[lib]
bench = false

[dependencies]

# Workspace dependencies
ferveo-common = { workspace = true }
ferveo-tdec = { workspace = true, features = ["bls12_381"] }

ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
subproductdomain.workspace = true
thiserror = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
generic-array = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
digest = { workspace = true, features = ["alloc"] }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }
test-case = { workspace = true }
serde = { workspace = true, features = ["derive"] }
cargo-smart-release = { workspace = true }

[[example]]
name = "bench_primitives_size"
path = "examples/bench_primitives_size.rs"

#[[bench]]
#name = "pvdkg"
#path = "benches/benchmarks/pvdkg.rs"
#harness = false

[[bench]]
name = "benchmarks"
path = "benches/bench_main.rs"
harness = false

[package.metadata.cargo-machete]
ignored = [
    "rand_old", # used by benchmarks/pairing.rs
]
