[package]
name = "ferveo-nucypher"
version = "0.8.0"
edition.workspace = true
license.workspace = true
repository = "https://github.com/gear-tech/ferveo-nucypher"
readme = "README.md"
description = "An implementation of a DKG protocol for threshold decryption."
keywords = ["DKG"]
categories = ["cryptography"]
authors.workspace = true

[lib]
bench = false

[dependencies]

# Workspace dependencies
ferveo-common = { workspace = true, features = ["std"] }
ferveo-tdec = { workspace = true, features = ["bls12_381", "std"] }

ark-bls12-381 = { workspace = true, features = ["std"] }
ark-ec = { workspace = true, features = ["std"] }
ark-ff = { workspace = true, features = ["std"] }
ark-poly = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }
ark-std = { workspace = true, features = ["std"] }
bincode = { workspace = true }
hex = { workspace = true, features = ["std"] }
itertools = { workspace = true, features = ["use_std"] }
rand = { workspace = true, features = ["std", "std_rng"] }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
subproductdomain = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
zeroize = { workspace = true, features = ["derive", "std"] }
generic-array = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
digest = { workspace = true, features = ["alloc", "rand_core"] }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }
test-case = { workspace = true }
serde = { workspace = true, features = ["derive"] }
cargo-smart-release = { workspace = true }

[[example]]
name = "bench_primitives_size"
path = "examples/bench_primitives_size.rs"

#[[bench]]
#name = "pvdkg"
#path = "benches/benchmarks/pvdkg.rs"
#harness = false

[[bench]]
name = "benchmarks"
path = "benches/bench_main.rs"
harness = false

[package.metadata.cargo-machete]
ignored = [
    "rand_old", # used by benchmarks/pairing.rs
]
