[package]
name = "subproductdomain-gear"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Implements subproduct domain algorithm"

[dependencies]
anyhow = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-std = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
