[package]
name = "subproductdomain-gear"
version = "0.8.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Implements subproduct domain algorithm"

[dependencies]
anyhow = { workspace = true, default-features = false }
ark-ec = { workspace = true, default-features = false }
ark-ff = { workspace = true, default-features = false }
ark-poly = { workspace = true, default-features = false }
ark-std = { workspace = true, default-features = false }

[dev-dependencies]
ark-bls12-381 = { workspace = true }

[features]
default = []
std = [
    "anyhow/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-std/std",
]
